## Process this file with automake to produce Makefile.in
#
noinst_LTLIBRARIES = libyac.la
libyac_la_SOURCES =                 \
               clipping.c           \
               clipping.h           \
               area.c               \
               area.h               \
               ensure_array_size.c  \
               ensure_array_size.h  \
               geometry.h           \
               grid.h               \
               points.h             \
               dep_list.h           \
               grid_cell.c          \
               grid_cell.h          \
               sphere_part.c        \
               sphere_part.h        \
               interval_tree.c      \
               interval_tree.h      \
               intersection.c       \
               utils.c              \
               utils.h 
