## Process this file with automake to produce Makefile.in
#
noinst_LTLIBRARIES = libyac.la
libyac_la_SOURCES =                 \
               area.c               \
               area.h               \
               bnd_circle.c         \
               check_overlap.c      \
               clipping.c           \
               clipping.h           \
               dep_list.c           \
               dep_list.h           \
               ensure_array_size.c  \
               ensure_array_size.h  \
               geometry.h           \
               grid.c               \
               grid.h               \
               grid_cell.c          \
               grid_cell.h          \
               grid_reg2d.c         \
               grid_reg2d.h         \
               grid_reg2d_common.c  \
               grid_reg2d_common.h  \
               grid_search.c        \
               grid_search.h        \
               grid_search_utils.c  \
               grid_search_utils.h  \
               grid_scrip.c         \
               grid_scrip.h         \
               grid_unstruct.c      \
               grid_unstruct.h      \
               interval_tree.c      \
               interval_tree.h      \
               intersection.c       \
               points.c             \
               points.h             \
               sphere_part.c        \
               sphere_part.h        \
               utils.c              \
               utils.h 
